# ai-reception

./: .env.realtime  .env.realtime.template  .gitignore  ACTUAL_IMPLEMENTATION_FLOW.md  README.md  REALTIME_INTEGRATION_GUIDE.md  REALTIME_INTEGRATION_PHASE1_COMPLETE.md  backend-performance-improvement-plan.md  frontend-state-analysis.md  package.json  railway.toml  requirements.txt  vercel.json
backend/: .env.example  DUPLICATE_NOTIFICATION_FIX.md  PHASE3_COMPLETION_REPORT.md  PHASE3_DEPENDENCY_FIX_REPORT.md  SLACK_MIGRATION_GUIDE.md  debug_test.py  pyproject.toml  requirements.txt  run_migration.py  slack_threading_demo.py  test_phase3_health.py  test_phase3_integration.py  test_server_endpoints.py  test_startup.py  verify_phase2_integration.py  verify_realtime_integration.py
backend/app/: config.py  main.py
backend/app/agents/: nodes.py  reception_graph.py  templates.py
backend/app/api/: conversation.py  health.py  phase3_management.py  video_room.py  websocket.py
backend/app/config/: __init__.py  feature_flags.py  realtime_settings.py
backend/app/models/: conversation.py  video_room.py  visitor.py
backend/app/services/: async_notification_manager.py  audio_service.py  background_tasks.py  calendar_service.py  connection_pool.py  cost_optimizer.py  fallback_manager.py  metrics_collector.py  monitoring_system.py  performance_optimizer.py  reliability_manager.py  security_manager.py  session_store.py  simple_audio_cache.py  (+4 more)
backend/data/: cost_management.db  monitoring.db  realtime.db
backend/migrations/: add_realtime_support.sql
backend/tests/: README_LLM_TESTING.md  conftest.py  llm_test_detailed_report.md  llm_test_framework.py  llm_test_runner.py  test_async_notification_manager.py  test_audio_cache.py  test_audio_service.py  test_background_tasks_async.py  test_calendar_service.py  test_conversation_api.py  test_cors_config.py  test_delivery_shortcut.py  test_duplicate_notification_prevention.py  test_end_to_end_duplicate_fix.py  test_greeting_duplicate_fix.py  test_llm_integration.py  test_phase1_improvements.py  test_realtime_integration_phase1.py  test_realtime_integration_phase2.py  test_reception_graph.py  test_scenarios.yaml  test_slack_service.py  test_slack_service_async.py  test_specialized_nodes_integration.py  test_video_room_api.py  test_visitor_type_ai.py  test_voice_websocket.py
(+92 files in other folders)
